# sgl-kernel-npu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CANN_8.5_ADAPTATION.md  CMakeLists.txt  PLATFORM_COMPAT_FIX.md  README.md  build.sh  config.ini  diagnose_cann.sh  diff  hq  push_instructions.sh  test_all_dimensions.py  test_conv1d.py  test_conv1d_mtp.py  test_conv1d_prefill.py  test_detailed_diagnosis.py  test_fusion_vs_atomic.py  test_graph.py  test_graph_mode_tiling.py
contrib/zbccl/: CMakeLists.txt  LICENSE  README.md
csrc/: .clang-format  CMakeLists.txt  build.sh  deepep_cmake_build.sh  pytorch_extensions.cpp
csrc/alloc_extend/op_host/: alloc_extend_tiling.cpp  alloc_extend_tiling.h
csrc/alloc_extend/op_kernel/: alloc_extend_kernel.cpp  alloc_extend_kernel.cpp.bak
csrc/apply_token_bitmask/op_host/: apply_token_bitmask.cpp
csrc/apply_token_bitmask/op_kernel/: apply_token_bitmask.cpp
csrc/apply_top_k_top_p_min_p/: README.md
csrc/apply_top_k_top_p_min_p/op_host/: apply_top_k_top_p_min_p.cpp  apply_top_k_top_p_min_p_def.h
csrc/apply_top_k_top_p_min_p/op_kernel/: apply_top_k_top_p_min_p_kernel.cpp
csrc/assign_cache_op/op_host/: assign_cache.cpp  tiling_data.h
csrc/assign_cache_op/op_kernel/: assign_cache_op.cpp
csrc/attentions/csrc/: CMakeLists.txt
csrc/batch_matmul_transpose/: README.md
csrc/batch_matmul_transpose/op_host/: batch_matmul_transpose.cpp
csrc/batch_matmul_transpose/op_kernel/: batch_matmul_transpose_kernel.cpp
csrc/build_tree/: README.md
csrc/build_tree/op_host/: build_tree.cpp
csrc/build_tree/op_kernel/: build_tree_kernel.cpp
csrc/cache_location_assign/op_host/: cache_loc_assign.cpp
csrc/cache_location_assign/op_kernel/: cache_loc_assign_kernel.cpp  cache_loc_assign_kernel_int32.cpp
csrc/catcoc/: README.md
csrc/catcoc/include/: catcoc_host_tiling.h  catcoc_host_utils.h  catcoc_kernel.h
csrc/catcoc/op_host/: catcoc_allgather_matmul.cpp  catcoc_host_tiling.h  catcoc_matmul_allreduce.cpp
csrc/catcoc/op_kernel/: catcoc_allgather_matmul_kernel.cpp
csrc/catcoc/ops/: CMakeLists.txt  build.sh
csrc/catlass/: README.md
csrc/catlass/op_host/: catlass_bmm_wfp8a16.cpp  catlass_gmm_fp8.cpp  catlass_matmul_basic.cpp  catlass_matmul_fp8.cpp  catlass_matmul_tiling.h  catlass_op_utils.cpp  catlass_op_utils.h
csrc/catlass/op_kernel/: catlass_bmm_wfp8a16_kernel.cpp  catlass_gmm_fp8_kernel.cpp  catlass_matmul_basic_kernel.cpp  catlass_matmul_fp8_kernel.cpp
csrc/causal_conv1d/: CMakeLists.txt  host.cpp  kernel.cpp
csrc/causal_conv1d/op_host/: causal_conv1d.cpp  causal_conv1d.h  causal_conv1d_def.cpp  causal_conv1d_infershape.cpp  causal_conv1d_tiling.cpp  causal_conv1d_tiling_planner.h  causal_conv1d_tiling_utils.h  causal_conv1d_tiling_validation.h  math_util.h
csrc/causal_conv1d/op_kernel/: causal_conv1d.cpp  causal_conv1d.h  causal_conv1d_common.h  causal_conv1d_fn.h  causal_conv1d_fn_tasks.h  causal_conv1d_tiling_data.h  causal_conv1d_tiling_key.h  causal_conv1d_update.h
csrc/causal_conv1d_update/op_host/: causal_conv1d_update.cpp
csrc/causal_conv1d_update/op_kernel/: causal_conv1d_update.h
csrc/compute_n_gram_ids/op_host/: compute_n_gram_ids.cpp  compute_n_gram_ids_tiling.h
csrc/compute_n_gram_ids/op_kernel/: compute_n_gram_ids.cpp  compute_n_gram_ids.h
csrc/custom_causal_conv1d/op_host/: custom_causal_conv1d.cpp  custom_causal_conv1d.h
csrc/custom_causal_conv1d/op_kernel/: causal_conv1d_fn_tasks.h  custom_causal_conv1d.cpp  custom_causal_conv1d_common.h  custom_causal_conv1d_fn.h  custom_causal_conv1d_fn_tasks.h  custom_causal_conv1d_tiling_data.h  custom_causal_conv1d_tiling_key.h  custom_causal_conv1d_update.h
csrc/deepep/: AddCustom.json  CMakeLists.txt  build.sh  compile_ascend_proj.sh  config.cpp  config.hpp  deep_ep.cpp  deep_ep.hpp  exception.hpp  pybind_extension.cpp  pytorch_npu_helper.hpp  shmem.hpp
csrc/deepep/ops/: CMakeLists.txt  CMakePresets.json  build.sh  common.h  quantize_functions.h
csrc/deepep/ops2/: CMakeLists.txt  CMakePresets.json  build.sh  func.cmake
csrc/dsa/: CMakeLists.txt  README.md  build.sh  version.info
csrc/dsa/cmake/: config.cmake  func.cmake  intf.cmake  intf_pub.cmake
csrc/dsa/docs/: custom-npu_lightning_indexer.md  custom-npu_sparse_flash_attention.md
csrc/dsa/examples/: test_npu_lightning_indexer.py  test_npu_sparse_flash_attention.py
csrc/dsa/torch_ops_extension/: build_and_install.sh  setup.py
csrc/helloworld/: README.md
csrc/laser_attention/op_host/: ascend_la_preprocess.cpp  la.cpp  la.h  la_preprocess.cpp  la_preprocess.h  la_preprocess_tiling.h
csrc/laser_attention/op_kernel/: AddressMappingForwardOnline.h  address_const.h  ascend_laser_attention.cpp  la_preprocess.cpp  la_preprocess.h
csrc/lightning_indexer/: README.md
csrc/lightning_indexer/op_host/: lightning_indexer.cpp  lightning_indexer_def.h
csrc/lightning_indexer/op_kernel/: lightning_indexer_common.h  lightning_indexer_kernel.cpp  lightning_indexer_service_cube.h  lightning_indexer_service_vector.h  lightning_indexer_vector.h
csrc/lora/op_host/: bgmv_expand.cpp  bgmv_shrink.cpp  sgemmc_expand.cpp  sgmv_expand.cpp  sgmv_shrink.cpp
csrc/lora/op_kernel/: bgmv_expand_kernel.cpp  bgmv_shrink_kernel.cpp  sgmv_expand_kernel.cpp  sgmv_shrink_kernel.cpp
csrc/mega_chunk_gdn/: chunk_cumsum.cpp  chunk_cumsum_kernel.cpp  chunk_h.cpp  chunk_h_kernel.cpp  chunk_o.cpp  chunk_o_kernel.cpp  mega_kernel.cpp  scaled_dot_kkt.cpp  tri_inverse_debug_kernel.cpp  tri_inverse_impl.cpp  wy_fast.cpp
csrc/mega_chunk_gdn/include/: kernel_utils.h
csrc/mega_chunk_gdn/op_host/: chunk_cumsum.cpp  chunk_h.cpp  chunk_o.cpp  mega_chunk_gdn.cpp  tri_inverse_debug.cpp
csrc/mega_chunk_gdn/op_kernel/: chunk_cumsum.cpp  chunk_h.cpp  chunk_o.cpp  mega_kernel.cpp  scaled_dot_kkt.cpp  tri_inverse_impl.cpp  wy_fast.cpp
csrc/mega_moe_w4a4/op_kernel/: int4_cvt.hpp  (+1 more)
csrc/memory/: weak_ref_tensor.cpp
csrc/mla_preprocess/: README.md
csrc/sparse_flash_attention/: README.md
csrc/tri_inv/: README.md
csrc/utils/: common.h  common_tiling.h  ge_helper.h  math_utils.h  torch_helper.h
csrc/zccl/: CMakeLists.txt
(+1121 files in other folders)
